--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Yukti Vijay"
 description              : "Experienced Aerospace Data Scientist specializing in flight test data analysis, machine learning solutions and advanced statistical modeling. Backed by a strong foundation in statistics and machine learning, I excel in modeling complex relationships to drive impactful data-driven decisions for aerospace applications."
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://yukti-vijay.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
