--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ title                    : "Yukti Vijay's Website"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Yukti Vijay"
-description              : "ok"
-url                      : "https://yukti-vijay.github.io"
+description              : "Experienced Aerospace Data Scientist specializing in flight test data analysis, machine learning solutions and advanced statistical modeling. Backed by a strong foundation in statistics and machine learning, I excel in modeling complex relationships to drive impactful data-driven decisions for aerospace applications."
+url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
@@ -105,18 +105,26 @@ analytics:
 # Site Author
 author:
   name             : "Yukti Vijay"
-  avatar           : "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/IMG_6745.jpeg"
   bio              : "Experienced Aerospace Data Scientist specializing in flight test data analysis, machine learning solutions and advanced statistical modeling. Backed by a strong foundation in statistics and machine learning, I excel in modeling complex relationships to drive impactful data-driven decisions for aerospace applications."
-  location         : "San Fransisco"
-  email            : "vijay.yukti2001@gmail.com"
+  location         : "San Fransisco, CA"
+  email            : "Vijay.yukti2001@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-       url: "mailto:vijay.yukti2001@gmail.com"
-
-    - label: "Linked-in"
+       url: "mailto:Vijay.yukti2001@gmail.com"
+    - label: "Website"
+      icon: "fas fa-fw fa-link"
+      # url: "https://your-website.com"
+    - label: "Twitter"
+      icon: "fab fa-fw fa-twitter-square"
+      # url: "https://twitter.com/"
+    - label: "Facebook"
+      icon: "fab fa-fw fa-facebook-square"
+      # url: "https://facebook.com/"
+    - label: "GitHub"
       icon: "fab fa-fw fa-github"
-       url: "www.linkedin.com/in/yuktivijay"
+      # url: "https://github.com/"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
