--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,10 @@ analytics:
 # Site Author
 author:
   name             : "Yukti Vijay"
-  avatar           : "/assets/IMG_6745.jpeg"
+  avatar:
+    path: "/assets/IMG_6745.jpeg"
+    width: 150 # Adjust this value to the desired width
+    height: 150 # Adjust this value to the desired height
   bio              : "Experienced Aerospace Data Scientist specializing in flight test data analysis, machine learning solutions and advanced statistical modeling. Backed by a strong foundation in statistics and machine learning, I excel in modeling complex relationships to drive impactful data-driven decisions for aerospace applications."
   location         : "San Fransisco, CA"
   email            : 
